Deployment/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: test
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: "nniikkoollaaii/oauth2-proxy-example-frontend:0.1.0"
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
